---------------------------------------------------------------------------------------------------
Version: 2.5.1
Date: 2025-06-23
  Bugfixes:
    - Don't crash when removing an entity with the GUI open.
---------------------------------------------------------------------------------------------------
Version: 2.5.0
Date: 2025-06-10
  Changes:
    - Use native quality display in sprite buttons
---------------------------------------------------------------------------------------------------
Version: 2.4.3
Date: 2025-03-25
  Bugfixes:
    - Fix oversized quality icons when running non-native screen resolutions (reported by @CptAFK on Github, #29)
---------------------------------------------------------------------------------------------------
Version: 2.4.2
Date: 2025-02-22
  Bugfixes:
    - Fix another crash with strange signals
---------------------------------------------------------------------------------------------------
Version: 2.4.1
Date: 2025-02-05
  Bugfixes:
    - Fix crash with exotic signals (such as a space location)
---------------------------------------------------------------------------------------------------
Version: 2.4.0
Date: 2025-01-24
  Changes:
    - Display quality in HUD and combinator GUIs correctly
---------------------------------------------------------------------------------------------------
Version: 2.3.0
Date: 2025-01-18
  Changes:
    - Multiplayer fixes
    - Enable recipe only if 'circuit-network' technology has been researched
    - Show search text when search bar is toggled
    - Add some missing localization
---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: 2025-01-02
  Changes:
    - Allow text field updates by pressing Enter.
    - fix crash with entity signals (reported by @therealzoomgod on github, thank you!)